responsive issues covered

--- a/src/App.css
+++ b/src/App.css
@@ -37,14 +37,10 @@ body {
 }
 
 .social-button {
-  padding: 9px 13px 9px 11px;
   border-radius: 6px;
   border: 1px solid #D1D5DB;
-  display: flex;
   font-size: 1.1em;
-  align-items: center;
-  width: 8em;
-  text-align: center;
+  width: 7em;
   justify-content: center;
   cursor: pointer;
 }
@@ -92,10 +88,33 @@ small a:hover {
 a {
   text-decoration: none;
   color: unset;
-
 }
+
+
 
 .social-button a {
   display: flex;
+  justify-content: center;
   gap: 10px;
+  padding: 9px 13px 9px 16px;
+  width: 100%;
+  text-align: centers;
+}
+
+@media (max-width: 1150px) {
+  .container {
+    width: 38%;
+  }
+
+  .button-container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media (max-width: 550px) {
+  .container {
+    width: 80%;
+  }
+
 }
